# SnowMapPy

./: .gitignore  404.html  DEPLOYMENT.md  Dockerfile  LICENSE  MANIFEST.in  README-Docker.md  README.md  TESTING.md  __init__.py  fsc_comparison.ipynb  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements-docs.txt  requirements.txt  setup.py  sitemap.xml
.github/workflows/: docs.yml
SnowMapPy/: __init__.py  _numba_kernels.py  cli.py  clipping.py  data_io.py  file_handling.py  prepare_modis.py  reprojection.py  temporal_interpolation.py  time_serie.py
SnowMapPy/cloud/: __init__.py  auth.py  loader.py  processor.py
SnowMapPy/core/: __init__.py  console.py  data_io.py  memory.py  quality.py  spatial.py  temporal.py  utils.py
SnowMapPy/local/: __init__.py  file_handler.py  preparator.py  processor.py
SnowMapPy/tests/test_cloud/: test_basic_cloud.py
api/: index.html
api/cloud/: index.html
api/core/: index.html
api/core-utils/: index.html
changelog/: index.html
cli/: index.html
cloud/: __init__.py  auth.py  loader.py  processor.py
contributing/: index.html
core/: data_io.py  quality.py  spatial.py  temporal.py  utils.py
docs/: changelog.md  cli.md  contributing.md  gee-setup.md  index.md  installation.md  quickstart.md
docs/api/: cloud.md  core-utils.md  core.md  index.md
docs/examples/: basic-processing.md  export.md  index.md  multi-year.md  visualization.md
docs/stylesheets/: extra.css
docs/user-guide/: algorithm.md  index.md  interpolation.md  memory.md  output.md  spatial-correction.md
examples/: index.html
examples/basic-processing/: index.html
examples/export/: index.html
examples/multi-year/: index.html
examples/visualization/: index.html
gee-setup/: index.html
installation/: index.html
local/: file_handler.py  preparator.py  processor.py
quickstart/: index.html
recipes/snowmappy/: meta.yaml
search/: search_index.json
stylesheets/: extra.css
tests/data_to_test/SHP/: NewSA.dbf  NewSA.sbn  NewSA.sbx  NewSA.shp  NewSA.shp.xml  NewSA.shx
user-guide/: index.html
user-guide/algorithm/: index.html
user-guide/interpolation/: index.html
user-guide/memory/: index.html
user-guide/output/: index.html
user-guide/spatial-correction/: index.html
