[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "SnowMapPy"
version = "2.0.0"
description = "MODIS NDSI snow cover processing for Google Earth Engine"
readme = "README.md"
license = {text = "MIT"}
authors = [
    { name = "Haytam Elyoussfi", email = "haytam.elyoussfi@um6p.ma" },
    { name = "Hatim BECHRI", email = "hatim.bechri@uqtr.ca" },
    { name = "Mostafa Bousbaa", email = "Mostafa.bousbaa@um6p.ma" }
]
maintainers = [
    { name = "Haytam Elyoussfi", email = "haytam.elyoussfi@um6p.ma" }
]
keywords = [
    "modis", "ndsi", "snow-cover", "remote-sensing", "earth-engine", 
    "gis", "hydrology", "gap-filling", "terra", "aqua", "cryosphere"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: GIS",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
    "Topic :: Scientific/Engineering :: Hydrology"
]
dependencies = [
    "numpy>=1.24.0,<3.0.0",
    "scipy>=1.10.0,<2.0.0",
    "pandas>=2.0.0,<3.0.0",
    "numba>=0.58.0,<1.0.0",
    "xarray>=2024.1.0",
    "rasterio>=1.3.0,<2.0.0",
    "rioxarray>=0.15.0",
    "geopandas>=0.14.0,<2.0.0",
    "pyproj>=3.6.0,<4.0.0",
    "shapely>=2.0.0,<3.0.0",
    "earthengine-api>=0.1.380",
    "geemap>=0.32.0",
    "xee>=0.0.15",
    "zarr>=2.16.0,<4.0.0",
    "numcodecs>=0.12.0,<1.0.0",
    "tqdm>=4.66.0",
    "affine>=2.4.0",
    "questionary>=2.0.0"
]
requires-python = ">=3.11"

[project.scripts]
snowmappy = "SnowMapPy.cli:main"

[project.urls]
"Bug Reports" = "https://github.com/haytamelyo/SnowMapPy/issues"
"Source" = "https://github.com/haytamelyo/SnowMapPy"
"Documentation" = "https://github.com/haytamelyo/SnowMapPy#readme"

[project.optional-dependencies]
dev = ["pytest>=6.0", "flake8>=3.8", "black>=21.0", "matplotlib>=3.5.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["SnowMapPy*"]

[tool.setuptools.package-data]
"*" = ["*.md", "*.txt", "*.yml", "*.yaml"]